# student-grade-service

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  api c++.postman_environment.json  sonar-project.properties  student-grade-service-postman-collection.json
.github/workflows/: ci-cd.yml
deploy/: student-grade-service.service
include/: grade_calculator.h  student_service.h
scripts/: check_coverage.sh  deploy.sh  post_deploy_healthcheck.sh  rollback.sh
src/: grade_calculator.cpp  main.cpp  student_service.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_grade_calculator.cpp
